@@ -4,7 +4,7 @@ PKG_LICENSE="GPLv3"
 PKG_SITE="https://github.com/Novik/ruTorrent"
 PKG_URL="https://dl.bintray.com/novik65/generic/ruTorrent-$PKG_VERSION.zip"
 PKG_SOURCE_DIR="ruTorrent-master"
-PKG_DEPENDS_TARGET="toolchain php"
+PKG_DEPENDS_TARGET="toolchain mediainfo php unrar"
 PKG_AUTORECONF="no"
 PKG_SECTION="service"
 
@@ -13,7 +13,7 @@ PKG_ADDON_NAME="ruTorrent"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_ADDON_REQUIRES="service.rtorrent:0.0.0"
 PKG_MAINTAINER="thoradia"
-PKG_REV="2"
+PKG_REV="3"
 PKG_SHORTDESC="$PKG_ADDON_NAME: web front-end for rTorrent"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is a web front-end for rtorrent designed to emulate the look and feel of µTorrent web user interface"
 PKG_DISCLAIMER="Keep it legal and carry on"
@@ -34,10 +34,11 @@ addon() {
   mkdir -p $ADDON_BUILD/$PKG_ADDON_ID/bin
   cp $(get_build_dir php)/.install_pkg/usr/bin/php-cgi \
      $ADDON_BUILD/$PKG_ADDON_ID/bin/php
+  cp $(get_build_dir mediainfo)/Project/GNU/CLI/mediainfo \
+     $(get_build_dir unrar)/unrar \
+     $ADDON_BUILD/$PKG_ADDON_ID/bin/
 
   mkdir -p $ADDON_BUILD/$PKG_ADDON_ID/rutorrent
   cp -R $PKG_BUILD/* \
         $ADDON_BUILD/$PKG_ADDON_ID/rutorrent
-
-  rm -rf $ADDON_BUILD/$PKG_ADDON_ID/rutorrent/plugins/mediainfo
 }
